force-app/main/default/objects/Account_Plan_Status_Code__c/Account_Plan_Status_Code__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Error,Warning message handler for Account Plan</description>
    <label>Account Plan Status Code</label>
</CustomObject>