force-app/main/default/objects/Account_Plan_Status_Code__c/fields/Events__c.field-meta.xml
<CustomField>
    <fullName>Events__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Events</label>
    <length>255</length>
    <type>Text</type>
</CustomField>