force-app/main/default/objects/Account_Plan_Status_Code__c/fields/PageName__c.field-meta.xml
<CustomField>
    <fullName>PageName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PageName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>