force-app/main/default/objects/Account_Plan_Status_Code__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Step (0-6)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>